[package]
name = "aoc-2023-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12.0"
rayon = "1.8.0"
regex = "1.10.2"

[[bin]]
name = "1"
path = "src/day1.rs"

[[bin]]
name = "2"
path = "src/day2.rs"

[[bin]]
name = "3"
path = "src/day3.rs"

[[bin]]
name = "4"
path = "src/day4.rs"

[[bin]]
name = "5"
path = "src/day5.rs"

[[bin]]
name = "6"
path = "src/day6.rs"

[[bin]]
name = "7"
path = "src/day7.rs"

[[bin]]
name = "8"
path = "src/day8.rs"
